--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Upload de Arquivos</title>
 </head>
 <body>
@@ -16,49 +16,12 @@
         <form id="formCSV" action="#" method="post">
             <div class="form-group">
                 <label for="arquivo">Arquivo:</label>
-                <input type="file" id="arquivo" name="arquivo">
+                <input type="file" id="livros1" accept=".csv">
             </div>
             <button type="submit">Enviar Arquivo</button>
             <p class="success">Arquivos enviados: Livro.csv</p>
         </form>
     </section>
-
-    <!--<section id="Autor">
-        <h1>Upload de Autor</h1>
-        <form action="#" method="post">
-            <div class="form-group">
-                <label for="arquivo">Arquivo:</label>
-                <input type="file" id="arquivo" name="arquivo">
-            </div>
-            <button type="submit">Enviar Arquivo</button>
-            <p class="success">Arquivos enviados: Autor.csv</p>
-        </form>
-    </section>
-
-    <section id="Estudante">
-        <h1>Upload de Estudante</h1>
-        <form action="#" method="post">
-            <div class="form-group">
-                <label for="arquivo">Arquivo:</label>
-                <input type="file" id="arquivo" name="arquivo">
-            </div>
-            <button type="submit">Enviar Arquivo</button>
-            <p class="success">Arquivos enviados: Estudante.csv</p>
-        </form>
-    </section>
-
-    <section id="Emprestimo">
-        <h1>Upload de Emprestimo</h1>
-        <form action="#" method="post">
-            <div class="form-group">
-                <label for="arquivo">Arquivo:</label>
-                <input type="file" id="arquivo" name="arquivo">
-            </div>
-            <button type="submit">Enviar Arquivo</button>
-            <p class="success">Arquivos enviados: Emprestimo.csv</p>
-        </form>
-    </section>-->
-
     <section id="visualizacao">
         <h2 id="tituloSecao"></h2>
         <table id="tabelaDados">
@@ -67,6 +30,6 @@
         </table>
     </section>
 
-    <script src="teste.js"></script>
+    <script src="Main.js"></script>
 </body>
 </html>
