--- a/index.html
+++ b/index.html
@@ -22,6 +22,43 @@
             <p class="success">Arquivos enviados: Livro.csv</p>
         </form>
     </section>
+
+        <!--<section id="Autor">
+        <h1>Upload de Autor</h1>
+        <form action="#" method="post">
+            <div class="form-group">
+                <label for="arquivo">Arquivo:</label>
+                <input type="file" id="arquivo" name="arquivo">
+            </div>
+            <button type="submit">Enviar Arquivo</button>
+            <p class="success">Arquivos enviados: Autor.csv</p>
+        </form>
+    </section>
+
+    <section id="Estudante">
+        <h1>Upload de Estudante</h1>
+        <form action="#" method="post">
+            <div class="form-group">
+                <label for="arquivo">Arquivo:</label>
+                <input type="file" id="arquivo" name="arquivo">
+            </div>
+            <button type="submit">Enviar Arquivo</button>
+            <p class="success">Arquivos enviados: Estudante.csv</p>
+        </form>
+    </section>
+
+    <section id="Emprestimo">
+        <h1>Upload de Emprestimo</h1>
+        <form action="#" method="post">
+            <div class="form-group">
+                <label for="arquivo">Arquivo:</label>
+                <input type="file" id="arquivo" name="arquivo">
+            </div>
+            <button type="submit">Enviar Arquivo</button>
+            <p class="success">Arquivos enviados: Emprestimo.csv</p>
+        </form>
+    </section>-->
+    
     <section id="visualizacao">
         <h2 id="tituloSecao"></h2>
         <table id="tabelaDados">
