--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Upload de Arquivos</title>
 </head>
+
 <body>
     <header>
         <h1>BIBLIOTECA DIGITAL</h1>
@@ -13,60 +14,85 @@
 
     <section id="Livro">
         <h1>Upload de Livro</h1>
-        <form id="formCSV" action="#" method="post">
+        <form id="formCSV1" action="#" method="post">
             <div class="form-group">
-                <label for="arquivo">Arquivo:</label>
-                <input type="file" id="livros1" accept=".csv">
+                <label for="livros">Arquivo:</label>
+                <input type="file" id="livros" accept=".csv">
             </div>
             <button type="submit">Enviar Arquivo</button>
             <p class="success">Arquivos enviados: Livro.csv</p>
         </form>
+
+        <div id="visualizacao">
+            <h2 id="tituloSecao1"></h2>
+            <table id="tabelaDados1">
+                <thead id="cabecalhoTabela1"></thead>
+                <tbody id="corpoTabela1"></tbody>
+            </table>
+        </div>
     </section>
 
-        <!--<section id="Autor">
+    <section id="Autor">
         <h1>Upload de Autor</h1>
-        <form action="#" method="post">
+        <form id="formCSV2" action="#" method="post">
             <div class="form-group">
-                <label for="arquivo">Arquivo:</label>
-                <input type="file" id="arquivo" name="arquivo">
+                <label for="autores">Arquivo:</label>
+                <input type="file" id="autores" accept=".csv">
             </div>
             <button type="submit">Enviar Arquivo</button>
             <p class="success">Arquivos enviados: Autor.csv</p>
         </form>
+
+        <div id="visualizacao">
+            <h2 id="tituloSecao2"></h2>
+            <table id="tabelaDados2">
+                <thead id="cabecalhoTabela2"></thead>
+                <tbody id="corpoTabela2"></tbody>
+            </table>
+        </div>
     </section>
 
     <section id="Estudante">
         <h1>Upload de Estudante</h1>
-        <form action="#" method="post">
+        <form id="formCSV3" action="#" method="post">
             <div class="form-group">
-                <label for="arquivo">Arquivo:</label>
-                <input type="file" id="arquivo" name="arquivo">
+                <label for="estudantes">Arquivo:</label>
+                <input type="file" id="estudantes" accept=".csv">
             </div>
             <button type="submit">Enviar Arquivo</button>
             <p class="success">Arquivos enviados: Estudante.csv</p>
         </form>
+
+        <div id="visualizacao">
+            <h2 id="tituloSecao3"></h2>
+            <table id="tabelaDados3">
+                <thead id="cabecalhoTabela3"></thead>
+                <tbody id="corpoTabela3"></tbody>
+            </table>
+        </div>
     </section>
 
     <section id="Emprestimo">
-        <h1>Upload de Emprestimo</h1>
-        <form action="#" method="post">
+        <h1>Upload de Empréstimo</h1>
+        <form id="formCSV4" action="#" method="post">
             <div class="form-group">
-                <label for="arquivo">Arquivo:</label>
-                <input type="file" id="arquivo" name="arquivo">
+                <label for="emprestimo">Arquivo:</label>
+                <input type="file" id="emprestimo" accept=".csv">
             </div>
             <button type="submit">Enviar Arquivo</button>
             <p class="success">Arquivos enviados: Emprestimo.csv</p>
         </form>
-    </section>-->
-    
-    <section id="visualizacao">
-        <h2 id="tituloSecao"></h2>
-        <table id="tabelaDados">
-            <thead id="cabecalhoTabela"></thead>
-            <tbody id="corpoTabela"></tbody>
-        </table>
+
+        <div id="visualizacao">
+            <h2 id="tituloSecao4"></h2>
+            <table id="tabelaDados4">
+                <thead id="cabecalhoTabela4"></thead>
+                <tbody id="corpoTabela4"></tbody>
+            </table>
+        </div>
     </section>
 
     <script src="Main.js"></script>
 </body>
+
 </html>
