--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style.css">
     <title>Upload de Arquivos</title>
 </head>
 
@@ -21,6 +21,8 @@
             </div>
             <button type="submit">Enviar Arquivo</button>
             <p class="success">Arquivos enviados: Livro.csv</p>
+
+            <div id="mensagemErro" class="error"></div>
         </form>
 
         <div id="visualizacao">
