--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <input type="file" id="autores" accept=".csv">
             </div>
             <button type="submit">Enviar Arquivo</button>
-            <p class="success">Arquivos enviados: Autor.csv</p>
+            <p id="mensagemEnvio1" class="success"></p>
         </form>
 
         <div id="visualizacao">
@@ -40,9 +40,7 @@
                 <input type="file" id="livros" accept=".csv">
             </div>
             <button type="submit">Enviar Arquivo</button>
-            <p class="success">Arquivos enviados: Livro.csv</p>
-
-            <div id="mensagemErro" class="error"></div>
+            <p id="mensagemEnvio2" class="success"></p>
         </form>
 
         <div id="visualizacao">
@@ -62,7 +60,7 @@
                 <input type="file" id="estudantes" accept=".csv">
             </div>
             <button type="submit">Enviar Arquivo</button>
-            <p class="success">Arquivos enviados: Estudante.csv</p>
+            <p id="mensagemEnvio3" class="success"></p>
         </form>
 
         <div id="visualizacao">
@@ -82,7 +80,7 @@
                 <input type="file" id="emprestimo" accept=".csv">
             </div>
             <button type="submit">Enviar Arquivo</button>
-            <p class="success">Arquivos enviados: Emprestimo.csv</p>
+            <p id="mensagemEnvio4" class="success"></p>
         </form>
 
         <div id="visualizacao">
@@ -96,5 +94,4 @@
 
     <script src="Main.js"></script>
 </body>
-
 </html>
