Implementando novas funcionalidades no HTML e Javascript

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
             <p id="mensagemEnvio1" class="success"></p>
         </form>
 
-        <div id="visualizacao">
+        <button id="mostrarTabelaAutores" style="display:none;">Mostrar Tabela</button>
+        <button id="ocultarTabelaAutores" style="display:none;">Ocultar Tabela</button>
+
+        <div id="visualizacaoAutor" style="display:none;">
             <h2 id="tituloSecao1"></h2>
             <table id="tabelaDados1">
                 <thead id="cabecalhoTabela1"></thead>
@@ -43,7 +46,10 @@
             <p id="mensagemEnvio2" class="success"></p>
         </form>
 
-        <div id="visualizacao">
+        <button id="mostrarTabelaLivros" style="display:none;">Mostrar Tabela</button>
+        <button id="ocultarTabelaLivros" style="display:none;">Ocultar Tabela</button>
+
+        <div id="visualizacaoLivro" style="display:none;">
             <h2 id="tituloSecao2"></h2>
             <table id="tabelaDados2">
                 <thead id="cabecalhoTabela2"></thead>
@@ -63,7 +69,10 @@
             <p id="mensagemEnvio3" class="success"></p>
         </form>
 
-        <div id="visualizacao">
+        <button id="mostrarTabelaEstudantes" style="display:none;">Mostrar Tabela</button>
+        <button id="ocultarTabelaEstudantes" style="display:none;">Ocultar Tabela</button>
+
+        <div id="visualizacaoEstudante" style="display:none;">
             <h2 id="tituloSecao3"></h2>
             <table id="tabelaDados3">
                 <thead id="cabecalhoTabela3"></thead>
@@ -83,7 +92,10 @@
             <p id="mensagemEnvio4" class="success"></p>
         </form>
 
-        <div id="visualizacao">
+        <button id="mostrarTabelaEmprestimo" style="display:none;">Mostrar Tabela</button>
+        <button id="ocultarTabelaEmprestimo" style="display:none;">Ocultar Tabela</button>
+
+        <div id="visualizacaoEmprestimo" style="display:none;">
             <h2 id="tituloSecao4"></h2>
             <table id="tabelaDados4">
                 <thead id="cabecalhoTabela4"></thead>
