adicionando os integrantes

--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
         </div>
     </section>
 
+    <div id="integrantes">
+        <h1>Integrantes</h1>
+        <p>Douglas, Pedro Gabriel e Pedro Thiago</p>
+    </div>
     <script src="Main.js"></script>
 </body>
 </html>
