Comentando algumas linhas de codigo do Javascript

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
     <div id="integrantes">
         <h1>Integrantes</h1>
-        <p>Douglas, Pedro Gabriel e Pedro Thiago</p>
+        <p>Douglas, Pedro Brito e Pedro Gabriel</p>
     </div>
     <script src="Main.js"></script>
 </body>
